--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -1,24 +1,14 @@
 name: Update Package Properties
 
 env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
   PRJ_NAME: "citus"
-  TAG_NAME: ${{ github.event.inputs.tag_name }}
-  FANCY: ${{ github.event.inputs.fancy }}
-  FANCY_VERSION_NO: ${{ github.event.inputs.fancy_version_no }}
-  MICROSOFT_EMAIL: ${{ github.event.inputs.microsoft_email }}
-  NAME: ${{ github.event.inputs.name }}
-
 on:
   workflow_dispatch:
     inputs:
       tag_name:
         description: 'The tag name on the project repo to be released'
-      fancy:
-        description: 'If fancy versioning is required set it "True"'
-        default: 'False'
       fancy_version_no:
-        description: 'If fancy versioning is True, then it should be set e.g 1'
+        description: 'If fancy versioning is needed, set value greater than 1 e.g 2'
         default: '1'
       microsoft_email:
         description: 'Email to be written on changelogs'
@@ -32,19 +22,20 @@ jobs:
 
     steps:
       - name: Checkout repository
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Install dependencies
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Clone Tools branch
-        run: git clone --branch tools-transition https://github.com/citusdata/tools.git
+        run: git clone --branch update_properties_fixes https://github.com/citusdata/tools.git
 
       - name: Install Python requirements
-        run: python -m pip install -r tools/python/requirements.txt
+        run: python -m pip install -r tools/packaging_automation/requirements.txt
 
       - name: Update Package Properties
         run: |
-          git config --global user.email "${MICROSOFT_EMAIL}"
-          git config --global user.name "${NAME}"
-          chmod +x ./tools/bash/update_package_properties.sh && ./tools/bash/update_package_properties.sh
+              python -m packaging_automation.update_package_properties --gh_token=${{ secrets.GH_TOKEN }} \
+              --prj_name "${PRJ_NAME}" --tag_name ${{ github.event.inputs.tag_name }} \
+              --email ${{ github.event.inputs.microsoft_email }} --name ${{ github.event.inputs.name }} --pipeline \
+              --exec_path "$(pwd)"
