--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -16,7 +16,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ el/7, el/8, ol/7, debian/stretch, debian/buster, ubuntu/xenial, ubuntu/bionic,ubuntu/focal ]
+        platform: [ el/7,
+                    el/8,
+                    ol/7,
+                    debian/stretch,
+                    debian/buster,
+                    ubuntu/xenial,
+                    ubuntu/bionic,
+                    ubuntu/focal ]
 
     steps:
       - name: Checkout repository
@@ -31,14 +38,14 @@ jobs:
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
-      - name: Build Packages
+      - name: Build packages
         run: |
           python -m  tools.packaging_automation.citus_package --gh_token "${{ secrets.GH_TOKEN }}" \
           --platform "${{ matrix.platform }}" --build_type 'release' \
           --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
           --output_dir "$(pwd)/packages/" --input_files_dir "$(pwd)"
 
-      - name: Publish Packages
+      - name: Publish packages
         run: |
           python -m  tools.packaging_automation.upload_to_package_cloud --platform ${{ matrix.platform }} \
           --package_cloud_api_token ${{ secrets.PACKAGE_CLOUD_API_TOKEN }} \
