--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Install dependencies
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
-      - name: Clone Tools branch
+      - name: Clone tools branch
         run: git clone --branch update_properties_fixes https://github.com/citusdata/tools.git
 
-      - name: Install Python requirements
+      - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
-      - name: Update Package Properties
+      - name: Update package Properties
         run: |
               python -m packaging_automation.update_package_properties --gh_token=${{ secrets.GH_TOKEN }} \
               --prj_name "${PRJ_NAME}" --tag_name ${{ github.event.inputs.tag_name }} \
