--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clone tools branch
-        run: git clone --depth=1 --branch update_properties_fixes https://github.com/citusdata/tools.git tools
+        run: git clone --depth=1 --branch develop https://github.com/citusdata/tools.git tools
 
       - name: Install package dependencies
         run: sudo apt install libcurl4-openssl-dev libssl-dev
@@ -40,14 +40,21 @@ jobs:
 
       - name: Build packages
         run: |
-          python -m  tools.packaging_automation.citus_package --gh_token "${{ secrets.GH_TOKEN }}" \
-          --platform "${{ matrix.platform }}" --build_type 'release' \
-          --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
-          --output_dir "$(pwd)/packages/" --input_files_dir "$(pwd)"
+          python -m  tools.packaging_automation.citus_package \
+          --gh_token "${{ secrets.GH_TOKEN }}" \
+          --platform "${{ matrix.platform }}" \
+          --build_type 'release' \
+          --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" \
+          --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
+          --output_dir "$(pwd)/packages/" \
+          --input_files_dir "$(pwd)"
 
       - name: Publish packages
         run: |
-          python -m  tools.packaging_automation.upload_to_package_cloud --platform ${{ matrix.platform }} \
+          python -m  tools.packaging_automation.upload_to_package_cloud \
+          --platform ${{ matrix.platform }} \
           --package_cloud_api_token ${{ secrets.PACKAGE_CLOUD_API_TOKEN }} \
-          --repository_name "${PACKAGE_CLOUD_REPO_NAME}" --output_file_path "$(pwd)/packages" \
-          --exec_folder_path $(pwd) --main_branch ${MAIN_BRANCH}
+          --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
+          --output_file_path "$(pwd)/packages" \
+          --current_branch ${GITHUB_REF##*/} \
+          --main_branch ${MAIN_BRANCH}
