--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -56,5 +56,5 @@ jobs:
           --package_cloud_api_token ${{ secrets.PACKAGE_CLOUD_API_TOKEN }} \
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
-          --current-branch "${GITHUB_REF##*/}" \
+          --current_branch "${GITHUB_REF##*/}" \
           --main_branch ${MAIN_BRANCH}
