Clone v0.8.0 tag of tools repo in pipelines

--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -28,7 +28,7 @@ jobs:
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Clone tools branch
-        run: git clone --branch update_properties_fixes https://github.com/citusdata/tools.git
+        run: git clone -b v0.8.0 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
