--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -16,14 +16,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ el/7,
-                    el/8,
-                    ol/7,
-                    debian/stretch,
-                    debian/buster,
-                    ubuntu/xenial,
-                    ubuntu/bionic,
-                    ubuntu/focal ]
+        platform:
+          - el/7,
+          - el/8,
+          - ol/7,
+          - debian/stretch,
+          - debian/buster,
+          - ubuntu/xenial,
+          - ubuntu/bionic,
+          - ubuntu/focal
 
     steps:
       - name: Checkout repository
