--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -17,13 +17,13 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - el/7,
-          - el/8,
-          - ol/7,
-          - debian/stretch,
-          - debian/buster,
-          - ubuntu/xenial,
-          - ubuntu/bionic,
+          - el/7
+          - el/8
+          - ol/7
+          - debian/stretch
+          - debian/buster
+          - ubuntu/xenial
+          - ubuntu/bionic
           - ubuntu/focal
 
     steps:
