--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -30,17 +30,23 @@ jobs:
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Clone tools branch
-        run: git clone -b v0.8.0 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b issue-149 --depth=1  https://github.com/citusdata/tools.git tools
+
+      - name: Set git name and email
+        run: |
+          git config --global user.email "${{ github.event.inputs.microsoft_email }}" && \
+          git config --global user.name "${{ github.event.inputs.name }}"
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
       - name: Update package properties
         run: |
-          python -m packaging_automation.update_package_properties \
+          python -m tools.packaging_automation.update_package_properties \
           --gh_token="${GH_TOKEN}" \
           --prj_name "${PRJ_NAME}" \
           --tag_name ${{ github.event.inputs.tag_name }} \
           --email ${{ github.event.inputs.microsoft_email }} \
-          --name ${{ github.event.inputs.name }} --pipeline \
+          --name "${{ github.event.inputs.name }}" \
+          --pipeline \
           --exec_path "$(pwd)"
