--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Update package properties
         run: |
-          python -m packaging_automation.update_package_properties \
+          python -m tools.packaging_automation.update_package_properties \
           --gh_token="${GH_TOKEN}" \
           --prj_name "${PRJ_NAME}" \
           --tag_name ${{ github.event.inputs.tag_name }} \
