--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Clone tools branch
         run: git clone -b issue-149 --depth=1  https://github.com/citusdata/tools.git tools
 
+      - name: Set git name and email
+        run: |
+          git config --global user.email "${{ github.event.inputs.microsoft_email }}" && \
+          git config --global user.name "${{ github.event.inputs.name }}"
+
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
