Adds update_package_properties and build_packages pipelines

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -3,7 +3,7 @@ name: Build Package
 env:
   MAIN_BRANCH: "all-enterprise"
   PACKAGE_CLOUD_REPO_NAME: "sample"
-  PACKAGE_ENCRYPTION_KEY: ${{ secrets.PACKAGING_ENCRYPTION_KEY }}
+  PACKAGE_ENCRYPTION_KEY: ${{ secrets.PACKAGE_ENCRYPTION_KEY }}
 on:
   push:
     branches: "**"
