Changes default branch name into issue_714 to test the pipeline in the next release

--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -26,6 +26,5 @@ jobs:
           then
             pgxn-release
           else
-            echo "Distro will not be released since current branch ${CURRENT_BRANCH} is different from main branch \
-            ${MAIN_BRANCH}"
+            echo "Distro will not be released since current branch '${CURRENT_BRANCH}' is different from main branch '${MAIN_BRANCH}'"
           fi
