Apply suggestions from code review
Co-authored-by: Hanefi Onaldi <Hanefi.Onaldi@microsoft.com>

--- a/.github/workflows/update-pgxn-version.yml
+++ b/.github/workflows/update-pgxn-version.yml
@@ -9,6 +9,7 @@ on:
     inputs:
       project_version:
         description: "Version number to be released e.g 10.0.3"
+        required: true
 
 jobs:
   update_pgxn:
