--- a/dockerfiles/oraclelinux-7-pg13/Dockerfile
+++ b/dockerfiles/oraclelinux-7-pg13/Dockerfile
@@ -1,6 +1,8 @@
 # vim:set ft=dockerfile:
 FROM oraclelinux:7
 
+RUN ( sudo dnf clean all && sudo rm -r /var/cache/dnf && sudo dnf upgrade -v )
+
 # FIXME: Hack around docker/docker#10180
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
     && yum clean all
