--- a/dockerfiles/centos-7-pg10/Dockerfile
+++ b/dockerfiles/centos-7-pg10/Dockerfile
@@ -1,7 +1,7 @@
 # vim:set ft=dockerfile:
 FROM centos:7
 
-RUN ( dnf clean all && rm -r /var/cache/dnf && dnf upgrade -v )
+RUN ( dnf clean all && rm -r /var/cache/dnf && dnf upgrade -y -v )
 
 # FIXME: Hack around docker/docker#10180
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
