--- a/dockerfiles/oraclelinux-8-pg10/Dockerfile
+++ b/dockerfiles/oraclelinux-8-pg10/Dockerfile
@@ -1,7 +1,7 @@
 # vim:set ft=dockerfile:
 FROM oraclelinux:8
 
-RUN ( dnf clean all && rm -r /var/cache/dnf && dnf upgrade -y -v )
+RUN yum -y update
 
 # FIXME: Hack around docker/docker#10180
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
