--- a/.github/workflows/update-pgxn-version.yml
+++ b/.github/workflows/update-pgxn-version.yml
@@ -8,10 +8,12 @@ on:
   workflow_dispatch:
     inputs:
       project_version:
-        description: 'Version number to be released e.g 10.0.3'
+        description: "Version number to be released e.g 10.0.3"
+        required: true
 
 jobs:
-  build:
+  update_pgxn:
+    name: Update pgxn configuration
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,10 +22,15 @@ jobs:
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Clone Tools branch
-        run: git clone --branch tools-transition-update-docker https://github.com/citusdata/tools.git
+        run: git clone --depth 1 --branch v0.8.1 https://github.com/citusdata/tools.git
 
       - name: Install Python requirements
-        run: export PYTHONPATH="$(pwd)/tools" && python -m pip install -r tools/packaging_automation/requirements.txt
+        run: python -m pip install -r tools/packaging_automation/requirements.txt
 
-      - name: Update Docker Files
-        run: python -m packaging_automation.update_pgxn --prj_ver ${PROJECT_VERSION} --exec_path "$(pwd)" --gh_token ${GH_TOKEN}
+      - name: Update pgxn files
+        run: |
+          python -m packaging_automation.update_pgxn \
+          --prj_ver ${PROJECT_VERSION} \
+          --gh_token ${GH_TOKEN} \
+          --pipeline \
+          --exec_path "$(pwd)"
