--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clone tools branch
-        run: git clone -b issue_156 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.1 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Install package dependencies
         run: sudo apt install libcurl4-openssl-dev libssl-dev
@@ -59,4 +59,4 @@ jobs:
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
           --current_branch "${GITHUB_REF##*/}" \
-          --main_branch ${MAIN_BRANCH}
+          --main_branch "${MAIN_BRANCH}"
