--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -30,7 +30,7 @@ jobs:
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Clone tools branch
-        run: git clone -b issue-149 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.1  --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Set git name and email
         run: |
@@ -47,6 +47,6 @@ jobs:
           --prj_name "${PRJ_NAME}" \
           --tag_name ${{ github.event.inputs.tag_name }} \
           --email ${{ github.event.inputs.microsoft_email }} \
-          --name "${{ github.event.inputs.name }}" \
+          --name ${{ github.event.inputs.name }} \
           --pipeline \
           --exec_path "$(pwd)"
