--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -42,14 +42,14 @@ jobs:
         run: sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Install python requirements
-        run: python -m pip install -r tools/packaging_automation/requirements.txt
+        run: sudo apt-get update && python -m pip install -r tools/packaging_automation/requirements.txt
 
       - name: Build packages
         run: |
           python -m tools.packaging_automation.citus_package \
           --gh_token "${GH_TOKEN}" \
-          --platform ${{ matrix.platform }} \
-          --build_type 'release' \
+          --platform "${{ matrix.platform }}" \
+          --build_type "release" \
           --secret_key "${PACKAGING_SECRET_KEY}" \
           --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
@@ -58,8 +58,8 @@ jobs:
       - name: Publish packages
         run: |
           python -m tools.packaging_automation.upload_to_package_cloud \
-          --platform ${{ matrix.platform }} \
-          --package_cloud_api_token ${{ secrets.PACKAGE_CLOUD_API_TOKEN }} \
+          --platform "${{ matrix.platform }}" \
+          --package_cloud_api_token "${{ secrets.PACKAGE_CLOUD_API_TOKEN }}" \
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
           --current_branch "${GITHUB_REF##*/}" \
