--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -2,7 +2,9 @@ name: Build Package
 
 env:
   MAIN_BRANCH: "all-citus"
-  PACKAGE_CLOUD_REPO_NAME: "sample"
+  PACKAGE_CLOUD_REPO_NAME: "community"
+  PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 on:
   push:
@@ -35,7 +37,7 @@ jobs:
         run: git clone -b v0.8.1 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Install package dependencies
-        run: sudo apt install libcurl4-openssl-dev libssl-dev
+        run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
@@ -43,9 +45,9 @@ jobs:
       - name: Build packages
         run: |
           python -m  tools.packaging_automation.citus_package \
-          --gh_token "${{ secrets.GH_TOKEN }}" \
+          --gh_token "${GH_TOKEN}" \
           --platform "${{ matrix.platform }}" \
-          --build_type 'release' \
+          --build_type "release" \
           --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" \
           --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
           --output_dir "$(pwd)/packages/" \
@@ -54,9 +56,9 @@ jobs:
       - name: Publish packages
         run: |
           python -m  tools.packaging_automation.upload_to_package_cloud \
-          --platform ${{ matrix.platform }} \
-          --package_cloud_api_token ${{ secrets.PACKAGE_CLOUD_API_TOKEN }} \
+          --platform "${{ matrix.platform }}" \
+          --package_cloud_api_token "${{PACKAGE_CLOUD_API_TOKEN}}" \
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
           --current_branch "${GITHUB_REF##*/}" \
-          --main_branch ${MAIN_BRANCH}
+          --main_branch "${GITHUB_REF##*/}"
