--- a/.github/workflows/build-citus-nightlies.yml
+++ b/.github/workflows/build-citus-nightlies.yml
@@ -2,7 +2,7 @@ name: Buildand publish citus nightly package
 
 env:
   MAIN_BRANCH: "all-citus"
-  PACKAGE_CLOUD_REPO_NAME: "citusdata/community"
+  PACKAGE_CLOUD_REPO_NAME: "citusdata/community-nightlies"
   PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   CURRENT_BRANCH: "${GITHUB_REF##*/}"
