--- a/.github/workflows/build-citus-nightlies.yml
+++ b/.github/workflows/build-citus-nightlies.yml
@@ -1,10 +1,12 @@
-name: Buildand publish citus nightly package
+name: Build and publish citus nightly package
 
 env:
-  MAIN_BRANCH: "all-citus"
+  MAIN_BRANCH: "develop"
   PACKAGE_CLOUD_REPO_NAME: "citusdata/community-nightlies"
-  PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  PACKAGE_CLOUD_API_TOKEN: "${{ secrets.PACKAGE_CLOUD_API_TOKEN }}"
+  GH_TOKEN: "${{ secrets.GH_TOKEN }}"
+  PACKAGING_SECRET_KEY: "${{ secrets.PACKAGING_SECRET_KEY }}"
+  PACKAGING_PASSPHRASE: "${{ secrets.PACKAGING_PASSPHRASE }}"
   CURRENT_BRANCH: "${GITHUB_REF##*/}"
 on:
   push:
@@ -53,8 +55,8 @@ jobs:
           --gh_token "${GH_TOKEN}" \
           --platform "${{ matrix.platform }}" \
           --build_type "nightly" \
-          --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" \
-          --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
+          --secret_key "${PACKAGING_SECRET_KEY}" \
+          --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
           --input_files_dir "$(pwd)/packaging"
 
@@ -66,4 +68,4 @@ jobs:
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
           --current_branch "${CURRENT_BRANCH}" \
-          --main_branch "${CURRENT_BRANCH}"
+          --main_branch "${MAIN_BRANCH}"
