--- a/.github/workflows/build-citus-nightlies.yml
+++ b/.github/workflows/build-citus-nightlies.yml
@@ -1,12 +1,10 @@
 name: Build and publish citus nightly package
 
 env:
-  MAIN_BRANCH: "develop"
+  MAIN_BRANCH: "all-citus"
   PACKAGE_CLOUD_REPO_NAME: "citusdata/community-nightlies"
-  PACKAGE_CLOUD_API_TOKEN: "${{ secrets.PACKAGE_CLOUD_API_TOKEN }}"
-  GH_TOKEN: "${{ secrets.GH_TOKEN }}"
-  PACKAGING_SECRET_KEY: "${{ secrets.PACKAGING_SECRET_KEY }}"
-  PACKAGING_PASSPHRASE: "${{ secrets.PACKAGING_PASSPHRASE }}"
+  PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
   CURRENT_BRANCH: "${GITHUB_REF##*/}"
 on:
   push:
@@ -67,5 +65,5 @@ jobs:
           --package_cloud_api_token "${PACKAGE_CLOUD_API_TOKEN}" \
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
-          --current_branch "${CURRENT_BRANCH}" \
+          --current_branch "${GITHUB_REF##*/}" \
           --main_branch "${MAIN_BRANCH}"
