Uses MAIN_BRANCH as main_branch parameter

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -63,5 +63,5 @@ jobs:
           --package_cloud_api_token "${PACKAGE_CLOUD_API_TOKEN}" \
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
-          --current_branch "${GITHUB_REF##*/}" \
-          --main_branch "${GITHUB_REF##*/}"
+          --current_branch "${CURRENT_BRANCH}" \
+          --main_branch "${MAIN_BRANCH}"
