--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -42,7 +42,7 @@ jobs:
         run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev
 
       - name: Install python requirements
-        run: sudo apt-get update && python -m pip install -r tools/packaging_automation/requirements.txt
+        run: python -m pip install -r tools/packaging_automation/requirements.txt
 
       - name: Build packages
         run: |
