--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -54,7 +54,8 @@ jobs:
           --secret_key "${PACKAGING_SECRET_KEY}" \
           --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
-          --input_files_dir "$(pwd)"
+          --input_files_dir "$(pwd)" \
+          --output_validation
 
       - name: Publish packages
         run: |
