--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -54,6 +54,7 @@ jobs:
           --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
           --input_files_dir "$(pwd)"
+          --output_validation
 
       - name: Publish packages
         run: |
