--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -14,4 +14,4 @@ debian:
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
-  - ".*: W: no-manual-page-for-binary pg-auto-failover-enterprise-pg-*-setup"
+  - ".*: W: no-manual-page-for-binary pg-auto-failover-enterprise-pg-.*-setup"
