--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -39,7 +39,7 @@ jobs:
         run: git clone -b v0.8.1 --depth=1 https://github.com/citusdata/tools.git tools
 
       - name: Install package dependencies
-        run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev
+        run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev python3-testresources
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
@@ -53,7 +53,8 @@ jobs:
           --secret_key "${PACKAGING_SECRET_KEY}" \
           --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
-          --input_files_dir "$(pwd)"
+          --input_files_dir "$(pwd)" \
+          --output_validation
 
       - name: Publish packages
         run: |
