--- a/.github/workflows/build-citus-community-nightlies.yml
+++ b/.github/workflows/build-citus-community-nightlies.yml
@@ -42,7 +42,7 @@ jobs:
         run: git clone -b all-citus --depth=1  https://github.com/citusdata/packaging.git packaging
 
       - name: Install package dependencies
-        run: sudo apt-get update && sudo apt install libcurl4-openssl-dev libssl-dev
+        run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev python3-testresources
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
@@ -56,7 +56,8 @@ jobs:
           --secret_key "${PACKAGING_SECRET_KEY}" \
           --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
-          --input_files_dir "$(pwd)/packaging"
+          --input_files_dir "$(pwd)/packaging" \
+          --output_validation
 
       - name: Publish packages
         run: |
