--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -14,3 +14,4 @@ debian:
 rpm:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
+  - "E: zero-length /usr/pgsql-11/share/extension/.*"
