--- a/.github/workflows/build-pgaf-enterprise-nightlies.yml
+++ b/.github/workflows/build-pgaf-enterprise-nightlies.yml
@@ -7,6 +7,8 @@ env:
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
   PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  DOCKERHUB_USER_NAME: ${{ secrets.DOCKERHUB_USER_NAME }}
+  DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
   UNENCRYPTED_PACKAGE: true
 on:
   push:
