Adds quotation mark into env parameter

--- a/.github/workflows/update-pgxn-version.yml
+++ b/.github/workflows/update-pgxn-version.yml
@@ -44,6 +44,6 @@ jobs:
         run: |
           python -m tools.packaging_automation.update_pgxn \
           --prj_ver ${{ github.event.inputs.project_version }} \
-          --gh_token ${GH_TOKEN} \
+          --gh_token "${GH_TOKEN}" \
           --pipeline \
           --exec_path "$(pwd)"
